Fix issue with code pre-wrap on code that doesn't leverage prism

--- a/assets/scss/modules/_global.scss
+++ b/assets/scss/modules/_global.scss
@@ -176,6 +176,7 @@ pre {
         font-family: $code-font;
         font-size: 12px;
         color: $gray-dark;
+        white-space: pre-wrap;
     }
 }
 
